# coxrathvon

./: .gitignore  .pre-commit-config.yaml  README.md  eslint.config.mjs  pyproject.toml
.agents/workflows/: deploy.md  pre-commit.md
.github/workflows/: ci.yml
app/: .gitignore  Dockerfile  app.yaml  build.sh  data.json  deploy.sh  develop-container.sh  develop.sh  main.py  requirements.txt  script.js  style.css
app/templates/: about.html  admin.html  index.html  puzzle.html  solution.html  svg.html  theme.html  web.html  web_solution.html  years.html
scripts/: create_requirements.sh  gcloud_setup.sh
terraform/: appengine.tf  build.tf  iam.tf  main.tf  project.tf  secretmanager.tf  storage.tf
tests/: test_app_main.py
